<resources>
    <string name="action_settings">设置</string>
    <string name="app_name">微品金融</string>
    <string name="regular_product">定期出借</string>
    <string name="bond_product">债权转让</string>
    <string name="automatic_product">智存出借</string>
    <string name="product_basic_info">基本信息</string>
    <string name="product_borrower_info">借款人资料</string>
    <string name="product_inverst_record">投标记录</string>
    <string name="product_detail">产品详情</string>
    <string name="product_project_introduction">项目介绍</string>
    <string name="product_risk_control">风险控制</string>
    <string name="product_qualification_material">资质资料</string>
    <string name="product_person_borrower_info">借款人信息</string>
    <string name="product_person_borrower_credit">信用评级</string>
    <string name="product_project_baoli">保理信息</string>
    <string name="product_project_rongzhu_tab2">融租详情</string>
    <string name="product_project_rongzhu_tab4">承租企业</string>
    <string name="product_presell_name">项目详情</string>
    <string name="product_presell_detail">认购须知</string>
    <string name="product_presell_qualification_material">资质材料</string>
    <string name="product_presell_risk_control">风险控制</string>
    <string name="product_presell_inverst_record">投标记录</string>
    <string name="product_car_tab1">基本信息</string>
    <string name="product_car_tab2">交易描述</string>
    <string name="product_car_tab3">质押车辆</string>
    <string name="product_car_tab4">风险控制</string>
    <string name="month1">1月</string>
    <string name="month2">2月</string>
    <string name="month3">3月</string>
    <string name="month4">4月</string>
    <string name="month5">5月</string>
    <string name="month6">6月</string>
    <string name="month7">7月</string>
    <string name="month8">8月</string>
    <string name="month9">9月</string>
    <string name="month10">10月</string>
    <string name="month11">11月</string>
    <string name="month12">12月</string>
    <string name="pull_to_refresh_get_more_label">上拉加载更多</string>
    <string name="pull_to_refresh_release_more_label">松开即可加载</string>
    <string name="pull_to_refresh_refreshing_more_label">正在加载…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_get_more_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_more_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_more_label</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="data_loading_please_wait">数据加载中，请稍后…</string>
    <string name="data_loading_failure_please_retry">数据加载失败，点击重试！</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中…</string>
    <string name="loading">正在加载...</string>
    <string name="http_request_error">网络请求失败！</string>
    <string name="no_more_data_tips">没有更多的数据了.</string>
    <string name="test">+0.6%</string>
    <string name="fetch_passcode">获取验证码</string>
    <string name="maintab_home">首页</string>
    <string name="maintab_plan">出借</string>
    <string name="maintab_mine">账户</string>
    <string name="maintab_more">更多</string>
    <string name="maintab_finance">实时财务</string>
    <string name="register_title">注册</string>
    <string name="register_username">用户名</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_password">密码</string>
    <string name="register_passcode">手机验证码</string>
    <string name="register_fetch_passcode">@string/fetch_passcode</string>
    <string name="register_commit">注册</string>
    <string name="register_tips">注册视为同意微品金融协议</string>
    <string name="login_title">会员登录</string>
    <string name="login_username">手机号或邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_commit">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="identity_verify_title">实名认证</string>
    <string name="identity_verify_name">请输入姓名</string>
    <string name="identity_verify_idno">请输入身份证号码</string>
    <string name="identity_verify_commit">认证</string>
    <string name="more_title">更多</string>
    <string name="more_identity_manager">认证管理</string>
    <string name="more_gesture_password">手势密码</string>
    <string name="more_upgrade">版本更新</string>
    <string name="more_current_version">当前版本 1.0</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_clear_cache">清除缓存</string>
    <string name="more_logout">退出登录</string>
    <string name="reset_login_password_title">找回登录密码</string>
    <string name="reset_login_password_username">手机号</string>
    <string name="reset_login_password_password">新登录密码</string>
    <string name="reset_login_password_password2">确认新登录密码</string>
    <string name="reset_login_password_passcode">手机验证码</string>
    <string name="reset_login_password_fetch_passcode">@string/fetch_passcode</string>
    <string name="reset_login_password_commit">提交</string>
    <string name="reset_trans_password_title">找回密码</string>
    <string name="reset_trans_password_username">手机号</string>
    <string name="reset_trans_password_login_password">登录密码</string>
    <string name="reset_trans_password_password">新交易密码</string>
    <string name="reset_trans_password_password2">确认新交易密码</string>
    <string name="reset_trans_password_passcode">手机验证码</string>
    <string name="reset_trans_password_fetch_passcode">@string/fetch_passcode</string>
    <string name="reset_trans_password_commit">提交</string>
    <string name="withdrawl_title">提现</string>
    <string name="withdrawl_nocard_tips">你还没有绑定银行卡!</string>
    <string name="withdrawl_balance">账户可用余额</string>
    <string name="withdrawl_can_deposit_now">可提现金额</string>
    <string name="withdrawl_need_service_charge">需收取服务费部分</string>
    <string name="withdrawl_neednot_service_charge">无需收取服务费部分</string>
    <string name="withdrawl_money">提现金额</string>
    <string name="withdrawl_commit">下一步</string>
    <string name="withdrawl_records_title">提现记录</string>
    <string name="score_records_title">积分记录</string>
    <string name="addbank_title">增加银行卡</string>
    <string name="addbank_bkname">开户银行</string>
    <string name="addbank_cardno">银行卡号</string>
    <string name="addbank_passcode">手机验证码</string>
    <string name="addbank_fetch_passcode">手机验证码</string>
    <string name="addbank_commit">保存</string>
    <string name="addbank_manager_title">银行卡管理</string>
    <string name="bankadd_title">增加银行卡</string>
    <string name="bankadd_bkname">开户银行</string>
    <string name="bankadd_cardno">银行卡号</string>
    <string name="bankadd_passcode">手机验证码</string>
    <string name="bankadd_fetch_passcode">手机验证码</string>
    <string name="bankadd_commit">保存</string>
    <string name="bankedit_title">编辑银行卡</string>
    <string name="bankedit_bkname">招商银行</string>
    <string name="bankedit_cardno">62284****9097</string>
    <string name="bankedit_province">省份</string>
    <string name="bankedit_city">城市</string>
    <string name="bankedit_sub_bkname">支行名称</string>
    <string name="bankedit_passcode">手机验证码</string>
    <string name="bankedit_fetch_passcode">手机验证码</string>
    <string name="bankedit_commit">保存</string>
    <string name="bankmgr_title">银行卡管理</string>
    <string name="bankselect_title">选择银行</string>
    <string name="bankcard_name">招商银行</string>
    <string name="bankcard_no">62236677****9908</string>
    <string name="recharge_title">充值</string>
    <string name="recharge_tips">近期标量较少，请谨慎充值，以免资金闲置</string>
    <string name="recharge_amount">充值金额</string>
    <string name="recharge_balance_label">账户可用余额</string>
    <string name="recharge_balance">100</string>
    <string name="recharge_amount_after_label">充值后金额</string>
    <string name="recharge_amount_after">100</string>
    <string name="recharge_select_bank">选择银行</string>
    <string name="recharge_commit">下一步</string>
    <string name="recharge_records_title">充值记录</string>
    <string name="editcontact_title">编辑紧急联系人</string>
    <string name="editcontact_name">紧急联系人</string>
    <string name="editcontact_phone">联系电话</string>
    <string name="authmgr_title">认证管理</string>
    <string name="auth_identity">身份认证</string>
    <string name="auth_mobile">手机认证</string>
    <string name="auth_email">邮箱认证</string>
    <string name="auth_identity_title">身份认证</string>
    <string name="auth_identity_name">真实姓名</string>
    <string name="auth_identity_idno">身份证号</string>
    <string name="auth_identity_idno2">确认身份证号</string>
    <string name="auth_identity_phone">手机号</string>
    <string name="auth_identity_passcode">手机验证码</string>
    <string name="auth_identity_fetch_passcode">手机验证码</string>
    <string name="auth_identity_commit">提交</string>
    <string name="auth_identity_pass">您已通过身份认证</string>
    <string name="auth_identity_notpass">您尚未通过身份认证</string>
    <string name="auth_email_title">邮箱认证</string>
    <string name="auth_email_email">邮箱账号</string>
    <string name="auth_email_passcode">邮验证码</string>
    <string name="auth_email_fetch_passcode">邮验证码</string>
    <string name="auth_email_commit">提交</string>
    <string name="auth_mobile_title">手机认证</string>
    <string name="auth_mobile_tips">您已经通过手机认证</string>
    <string name="auth_mobile_mobile_label">手机号</string>
    <string name="auth_mobile_check_loan_msg">是否接收放款短信</string>
    <string name="auth_mobile_check_restream_msg">是否接收回款短信</string>
    <string name="auth_mobile_check_push_msg">是否接收推送短信</string>
    <string name="security_settings_title">安全设置</string>
    <string name="security_login_password">登录密码</string>
    <string name="security_pay_password">交易密码</string>
    <string name="security_question">密保问题</string>
    <string name="mybid_title">我的出借</string>
    <string name="mybid_segment_posted">已投标</string>
    <string name="mybid_segment_repaying">还款中</string>
    <string name="mybid_segment_finished">已完成</string>
    <string name="mybid_total_principal_and_interest">待收本息总额</string>
    <string name="mybid_total_interest">待赚利息总额</string>
    <string name="mybid_total_principal">待收本金总额</string>
    <string name="mybid_posted_loan_no">借款编号:</string>
    <string name="mybid_posted_loan_status">还款中</string>
    <string name="mybid_posted_loan_date">投标时间:</string>
    <string name="mybid_posted_loan_expected_return"></string>
    <string name="mybid_posted_loan_bid_amount">投标金额:</string>
    <string name="mybid_posted_loan_title">【成都时代店】车辆借款27万</string>
    <string name="mybid_posted_loan_amount">金额:</string>
    <string name="mybid_posted_loan_deadline">期限:</string>
    <string name="mybid_posted_loan_rate">利率:</string>
    <string name="mybid_posted_loan_loaner">贷款人:</string>
    <string name="mybid_finished_next_repay_date">下一还款日:</string>
    <string name="mybid_finished_periods">期数</string>
    <string name="mybid_finished_principal_and_interest">回收本息</string>
    <string name="mybid_left_principal_and_interest">剩余本息:</string>
    <string name="message_center_title">消息中心</string>
    <string name="loan_detail_title">项目详情</string>
    <string name="loaninfo_basic">基本信息</string>
    <string name="loaninfo_loaner">借款人资料</string>
    <string name="loaninfo_bidrecords">投标记录</string>
    <string name="quite_signup">快速注册</string>
    <string name="quite_signup_short">100元起即可投</string>
    <string name="platform_msg">平台公告</string>
    <string name="platform_msg_short">最新平台公告</string>
    <string name="news_report">新闻报道</string>
    <string name="news_report_short">最新资讯报道</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_short">权威网贷平台</string>
    <string name="fresh_guide">新手指引</string>
    <string name="fresh_guide_short">3分钟快速出借</string>
    <string name="safe_guard">平台优势</string>
    <string name="safe_guard_short">100%本息保障</string>
</resources>