<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_guide_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_exit"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/quite_signup"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/quite_signup_short"
                    android:textColor="@color/assist_text_color"
                    android:textSize="@dimen/text_size_micro"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_gray"/>
        <LinearLayout
            android:id="@+id/home_guide_newbee"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_guide"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/fresh_guide"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/fresh_guide_short"
                    android:textColor="@color/assist_text_color"
                    android:textSize="@dimen/text_size_micro"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/home_guide_riskfund"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_list"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/platform_msg"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/platform_msg_short"
                    android:textColor="@color/assist_text_color"
                    android:textSize="@dimen/text_size_micro"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_gray"/>
        <LinearLayout
            android:id="@+id/home_guide_media"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_news"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/news_report"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/news_report_short"
                    android:textColor="@color/assist_text_color"
                    android:textSize="@dimen/text_size_micro"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/home_guide_aboutus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_aboutus"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/about_us"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/about_us_short"
                    android:textColor="@color/assist_text_color"
                    android:textSize="@dimen/text_size_micro"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_gray"/>
        <LinearLayout
            android:id="@+id/home_guide_safety"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_guard"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/safe_guard"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/SingleLineTextStyle"
                    android:text="@string/safe_guard_short"
                    android:textColor="@color/assist_text_color"
                    android:textSize="@dimen/text_size_micro"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
